# opc

./: AUTHORS  README  README.markdown
backend/: Makefile.am  autogen.sh  clean  config.inc  configure.ac  database  database.mysql  index.php  secure
backend/admin/: addcontest.php  addproblem.php  dump-to-sqlite.php  fillteamnames.php  fsck  fsck.php  fsck.problem.php  getsummary-ioi.php  query-config.php
backend/doc/: Doxyfile  Makefile.am
backend/lib/: contest.inc  db.inc  directoryfunctions.inc  logger.inc  mailer.inc  navig.inc  problems.inc  submissions.inc  upload.inc  user.inc
backend/programs/: .htaccess  HookAgent.php  Judge.inc  Makefile.am  queuemanager.php  runner.c  runner.cpp  submissions-processor.inc  submissions.php  updateall.php
backend/programs/compiler/: CompilerAbstract.inc  CompilerC.inc  CompilerCpp.inc  CompilerGcj.inc  CompilerGenericGNU.inc  CompilerGenericInterpreter.inc  CompilerJava.inc  common.inc
backend/programs/queue-awakeners/: Timeout.php
backend/programs/scorers/: AbstractScorer.php  IoiScorer.php  OpcScorer.php
backend/schema/: contest.rnc  problem.rnc  problem.rng  result.rnc  result.rng  user.rnc
backend/setup/: general.xml  install_database.php  install_db_tables.php  sample_conf.inc  schema.mysql  schema.pg  schema.sqlite  test_config.php  test_zend.php
tests/: BasicPageAccessWithNonAdminLogin.php  BasicPageAccessWithNonAdminLoginWithContestPrefix.php  ContestAfterTest.php  ContestBeforeTest.php  ContestBeforeWithLoginTest.php  OpcDataTest.php  OpcTest.php  PreTest.php  ProblemsControllerTest.php  UploadTest.php  test_config.inc
tests/Tests/: AllowRegisterTest.php  BasicPageAccessWithNonAdminLoginTest.php  BasicPageAccessWithNonAdminLoginWithContestPrefixTest.php  ContestAfterTest.php  ContestAfterWithLoginTest.php  ContestBeforeTest.php  ContestBeforeWithLoginTest.php  PreTest.php  ProblemsControllerTest.php  SubmissionsTest.php  UploadTest.php
tests/Tests/GradingTests/: PreWithChrootTest.php  UploadTest.php  UploadWithChrootTest.php
tests/Tests/XHTMLValidationTests/: XHTMLValidationTest.php
tests/code-samples/: SEG.c  TLE.c  fork.c  iarcs-mar05-ad-1-case4.py  mem.c  points-wrong.cpp  points.cpp  points.py  sigxcpu-handled.c  simple.c  simple.java  simple.py  sleep.c
tests/code-samples/points-java/: Main.java
webfiles/: .htaccess  App.php  bootstrap.php  config.inc  index.php  scripts.js  zend-test-index.php
webfiles/application/controllers/: AuthController.php  ContestsController.php  DataController.php  EmailController.php  ErrorController.php  ForgotPasswordController.php  IndexController.php  PagesController.php  ProblemsController.php  ProfileController.php  QueueController.php  RanksController.php  ResultsController.php  SuController.php  SubmitController.php  TeamlistController.php  UsersController.php
webfiles/pages/home/: index.php
webfiles/public/: .htaccess
(+52 files in other folders)
